tests/errors/test-return-missing-value.script

int foo() { return; }

//>2:13: error C11: cannot have return-statement without a value in function returning non-void
